{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 73,
  "lineage": "3c815e2c-5ee5-a089-ba49-70c857c6c97e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286134054656:internet-gateway/igw-0590dc1c00b106fa6",
            "id": "igw-0590dc1c00b106fa6",
            "owner_id": "286134054656",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-006860ea0868dec7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286134054656:route-table/rtb-0aa1b1e7221e71394",
            "id": "rtb-0aa1b1e7221e71394",
            "owner_id": "286134054656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-route-table"
            },
            "tags_all": {
              "Name": "main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-006860ea0868dec7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05823a7026ffbc382",
            "route_table_id": "rtb-0aa1b1e7221e71394",
            "subnet_id": "subnet-0b37d23bf5e447505"
          },
          "dependencies": [
            "aws_route_table.my_route_table",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b434591ad7cd0ae",
            "route_table_id": "rtb-0aa1b1e7221e71394",
            "subnet_id": "subnet-0aa80d4b110cd3546"
          },
          "dependencies": [
            "aws_route_table.my_route_table",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286134054656:security-group/sg-0757a9d0e7e7cdb54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0757a9d0e7e7cdb54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240621072518143400000004",
            "name_prefix": "terraform-",
            "owner_id": "286134054656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006860ea0868dec7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286134054656:subnet/subnet-0b37d23bf5e447505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b37d23bf5e447505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286134054656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-006860ea0868dec7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286134054656:subnet/subnet-0aa80d4b110cd3546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa80d4b110cd3546",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286134054656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-006860ea0868dec7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286134054656:vpc/vpc-006860ea0868dec7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a926b0db039b4a27",
            "default_route_table_id": "rtb-09cce4b84386f9ce5",
            "default_security_group_id": "sg-06d2538b8a2f551d7",
            "dhcp_options_id": "dopt-02135abd6ba011774",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006860ea0868dec7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cce4b84386f9ce5",
            "owner_id": "286134054656",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}